--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,12 +3,39 @@
   font-family: "Mulish", sans-serif;
 }
 
+.App {
+  max-width: 525px;
+  margin: 0 auto;
+}
+
 h1 {
-  font-weight: 700;
+  font-weight: 800;
+  font-size: x-large;
+  text-align: center;
+  color: #7D688D;
+}
+
+h4 {
+  font-size: medium;
+  font-weight: 800;
+  color: #8b8b8b;
+}
+
+.btn {
+  font-weight: 600;
+}
+
+.btn-primary {
+  background-color: #7D688D;
+  border: none;
+}
+
+.btn-primary:hover {
+  background-color: #5d4d69;
 }
 
 .recept-item {
-  border-radius: 30px;
+  border-radius: 20px;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.06), 0 6px 40px 0 rgba(125, 104, 141, 0.2);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.06), 0 6px 40px 0 rgba(125, 104, 141, 0.2);
   display: -webkit-box;
@@ -24,22 +51,125 @@ h1 {
 
 .recept-item :nth-child(1) h3 {
   color: #7D688D;
-  font-size: 1.7rem;
-  font-weight: bold;
+  font-size: 1.2rem;
+  font-weight: 600;
   margin-bottom: 0.3rem;
+  max-width: -webkit-min-content;
+  max-width: -moz-min-content;
+  max-width: min-content;
 }
 
-.recept-item :nth-child(1) h5 {
-  color: #323232;
-  opacity: 0.7;
+.recept-item :nth-child(1) p {
+  color: #8b8b8b;
+  font-weight: 600;
   margin-bottom: 0;
 }
 
 .recept-item :nth-child(2) {
   margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .recept-item :nth-child(2) img {
-  margin: 100% 0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0 0 0 0.9rem;
+  cursor: pointer;
+}
+
+#home h2 {
+  font-size: x-large;
+  margin-right: 1rem;
+}
+
+#home button {
+  font-size: small;
+}
+
+#noviRecept button {
+  width: 100%;
+  margin-top: 1rem;
+}
+
+#noviRecept .btn-danger {
+  background-color: transparent;
+  border-color: #7D688D;
+  color: #7D688D;
+}
+
+#noviRecept label {
+  font-weight: 600;
+}
+
+#receptInfo h2 {
+  color: #7D688D;
+  font-weight: 700;
+  margin: 0;
+}
+
+#receptInfo h3 {
+  font-size: 14pt;
+  font-weight: 700;
+  color: #323232;
+  margin: 0;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+#receptInfo h3 a {
+  color: #5d4d69;
+  font-weight: 400;
+}
+
+#receptInfo > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+#receptInfo > div img {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin: 0 0 0 1rem;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  padding: 0.2rem;
+  border-radius: 50%;
+  border: 2px solid #7D688D;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+#receptInfo > div p {
+  color: #5d4d69;
+}
+
+#receptInfo > div #upute {
+  margin-top: 1rem;
+  padding: 1rem;
+  border: 2px solid #7D688D;
+  border-radius: 10px;
+}
+
+#receptInfo .btn {
+  margin-top: 2rem;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .App {
+    margin-top: 2rem;
+  }
 }
 /*# sourceMappingURL=App.css.map */
