--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -6,12 +6,39 @@
     font-family: "Mulish", sans-serif;
 }
 
+.App {
+    max-width: 525px;
+    margin: 0 auto;
+}
+
 h1 {
-    font-weight: 700;
+    font-weight: 800;
+    font-size: x-large;
+    text-align: center;
+    color: $primary;
+}
+
+h4 {
+    font-size: medium;
+    font-weight: 800;
+    color: $tertiary;
+}
+
+.btn {
+    font-weight: 600;
+}
+
+.btn-primary {
+    background-color: $primary;
+    border: none;
+
+    &:hover {
+        background-color: $primaryDark;
+    }
 }
 
 .recept-item {
-    border-radius: 30px;
+    border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.06), 0 6px 40px 0 rgba(125, 104, 141, 0.2);
     display: flex;
 
@@ -19,28 +46,124 @@ h1 {
         width: fit-content;
     }
 
-    :nth-child(1) {        
+    :nth-child(1) {
         h3 {
             color: $primary;
-            font-size: 1.7rem;
-            font-weight: bold;
+            font-size: 1.2rem;
+            font-weight: 600;
             margin-bottom: 0.3rem;
-            
+            max-width: min-content;
         }
 
-        h5 {
-            color: $secondary;
-            opacity: 0.7;
+        p {
+            color: $tertiary;
+            font-weight: 600;
             margin-bottom: 0;
         }
-        
     }
 
     :nth-child(2) {
         margin-left: auto;
+        display: flex;
 
         img {
-            margin: 100% 0;
+            align-self: center;
+            margin: 0 0 0 0.9rem;
+            cursor: pointer;
         }
     }
+}
+
+#home {
+    h2 {
+        font-size: x-large;
+        margin-right: 1rem;
+    }
+
+    button {
+        font-size: small;
+    }
+}
+
+#noviRecept {
+    button {
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    .btn-danger {
+        background-color: transparent;
+        border-color: $primary;
+        color: $primary;
+    }
+
+    label {
+        font-weight: 600;
+    }
+}
+
+#receptInfo {
+    h2 {
+        color: $primary;
+        font-weight: 700;
+        margin: 0;
+    }
+
+    h3 {
+        font-size: 14pt;
+        font-weight: 700;
+        color: $secondary;
+        margin: 0;
+        align-self: center;
+
+        a {
+            color: $primaryDark;
+            font-weight: 400;
+        }
+    }
+
+    & > div {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 1rem;
+
+        img {
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            margin: 0 0 0 1rem;
+            box-sizing: content-box;
+            padding: 0.2rem;
+            border-radius: 50%;
+            border: 2px solid $primary;
+            align-self: center;
+        }
+
+        p {
+            color: $primaryDark;
+        }
+
+        #upute {
+            margin-top: 1rem;
+            padding: 1rem;
+            border: 2px solid $primary;
+            border-radius: 10px;
+        }
+    }
+
+    .btn {
+        margin-top: 2rem;
+        width: 100%;
+    }
+}
+
+
+
+// media query for bigger sizes
+@media (min-width: 768px) {
+    
+    .App {
+        margin-top: 2rem;
+    }
+
 }
